[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/mainsprite/Shi/hand.png" type="Texture" id=1]
[ext_resource path="res://Images/mainsprite/Shi/Shi.png" type="Texture" id=2]
[ext_resource path="res://Script's/Gui and Stuff/unispace bd.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script's/Shi Animação.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
resource_name = "Entrada Shi"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Node2D/Shi:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.1, 14.5, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Node2D/Hand:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.7, 3.5, 16, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Node2D/Hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3, 4.9, 6.5, 10, 14.5, 18.7, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.699997, 16.4 ), Vector2( 0.100006, -0.500004 ), Vector2( 0.100002, 4 ), Vector2( -0.5, 2.4 ), Vector2( 5.33334, -2.88889 ), Vector2( 0.333336, 2.44445 ), Vector2( 3.11111, 0.777781 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Node2D/Shi:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 3.8, 7, 10, 16.1, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 16.1 ), Vector2( 0.300003, -1.5 ), Vector2( 0.800003, -3.30001 ), Vector2( 0.300003, 0.199993 ), Vector2( 1, -1.7 ), Vector2( 3.11111, -1.22222 ), Vector2( 1, -0.888888 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Voce1:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 3.2, 6.4, 8.1, 10, 13, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.369, 0.369, 0.652, 0.652, 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Voce2:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 18, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Node2D/Shi:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Node2D/Hand:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Node2D/Hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.100006, -0.500004 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Node2D/Shi:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.3, 16.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Voce1:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Voce2:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voce1" type="Label" parent="CanvasLayer"]
margin_left = 781.0
margin_top = 279.0
margin_right = 1339.0
margin_bottom = 476.0
custom_fonts/font = SubResource( 3 )
text = "Você ainda está incompleto, 
mas não se preocupe...
Eu vou te ajudar a evoluir...

"
autowrap = true
clip_text = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voce2" type="Label" parent="CanvasLayer"]
margin_left = 199.0
margin_top = 314.0
margin_right = 757.0
margin_bottom = 511.0
custom_fonts/font = SubResource( 3 )
text = "Eu prometo..."
autowrap = true
clip_text = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
position = Vector2( 628, 486 )
scale = Vector2( 9, 9 )

[node name="Shi" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1.3, 16.1 )
texture = ExtResource( 2 )

[node name="Hand" type="Sprite" parent="CanvasLayer/Node2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.100006, -0.500004 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Entrada Shi" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
